test/functions/bradc/resolveGeneric.good
resolveGeneric.chpl:23: In function 'bar':
resolveGeneric.chpl:24: error: unresolved call 'D()'
resolveGeneric.chpl:4: note: candidates are: D(type t, param rank: int(64), x: string)
